# gba_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  bmp_mode_snake.cc  gba.hh  gbaMath.hh  snake.cc
cmake/: devKitPro.cmake  submodules.cmake
demos/: CMakeLists.txt  cube.cc  snake_bmp.cc
include/: Fixed.hh  bitmap.hh  common.hh  fixed.hh  math.hh  tiles.hh
